--- a/layouts/partials/hooks/head-end.html
+++ b/layouts/partials/hooks/head-end.html
@@ -1,4 +1,5 @@
 {{ with .Site.Params.algolia_docsearch }}
 <!-- stylesheet for algolia docsearch -->
-<link rel="stylesheet" href="/css/docsearch.css" />
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@docsearch/css@3"/></pre></li>
+<link rel="preconnect" href="https://K5B5JISBQS-dsn.algolia.net" crossorigin />
 {{ end }}
